# openseal

./: .gitignore  .gitignore.backup  .gitignore.private  .history.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EULA.md  IMPLEMENTATION_HARDENING.md  IMPLEMENTATION_LOCALIZATION.md  IMPLEMENTATION_RENAME.md  IMPLEMENTATION_TRANSLATION.md  IMPLEMENTATION_WHITEPAPER.md  LICENSE.md  QUICKSTART_KR.md  README.md  README_KR.md  RELEASE_PLAN.md  SPEC.md  TEST_RESULT_KR.md  install.sh  task.md  verify_openseal.sh
.archive/: SEAL_MODE_TEST.md
crates/openseal-cli/: Cargo.toml
crates/openseal-cli/src/: main.rs
crates/openseal-core/: Cargo.toml
crates/openseal-core/src/: lib.rs
crates/openseal-runtime/: Cargo.toml
crates/openseal-runtime/src/: lib.rs  main.rs
crates/openseal-secret/: Cargo.toml
crates/openseal-secret/src/: lib.rs
docs/archive/: ARCHITECTURE.md  OPENSEAL_DISCLOSURE_POLICY.md  OPENSEAL_DISCLOSURE_POLICY_KR.md  QUICKSTART.md  QUICKSTART_KR.md  SAFETY.md  SAFETY_KR.md  SECURITY_MODEL_KR.md  SPEC_PUBLIC.md
docs/internal/: BLUEPRINT_KR.md  CORE_MECHANISM_KR.md  EVOLUTION_HISTORY_KR.md  FUTURE_ROADMAP.md  INTERNAL_LOGIC_KR.md  TERMINOLOGY_KR.md  VERSION_HISTORY.md
docs/internal/archive/: Implementation_Plan_Ghosting.md  OpenSeal_UX_Enhancement_Proposal.md  PHASE1_PLAN_INITIAL.md  implementation_plan.md  release_notes_v0.2.4.md  task.md  walkthrough.md
docs/pending/: ARCHITECTURE_KR.md  OPENSEAL_DISCLOSURE_POLICY_KR.md  WHITEPAPER.md
docs/public/: AGNOSTICISM.md  AGNOSTICISM_KR.md  ARCHITECTURE.md  ARCHITECTURE_KR.md  OPENSEAL_DISCLOSURE_POLICY.md  OSIP-7325.md  OSIP-7325_KR.md  POLICY.md  POLICY_KR.md  PROTOCOL.md  PROTOCOL_KR.md  PROVIDER_GUIDE.md  PROVIDER_GUIDE_KR.md  QUICKSTART.md  QUICKSTART_KR.md  SECURITY_MODEL.md  SEED_PROVIDER_GUIDE.md  SEED_PROVIDER_GUIDE_KR.md  SPEC_PUBLIC.md  SPEC_PUBLIC_KR.md  USAGE.md  USAGE_KR.md  VERIFIER_GUIDE.md  VERIFIER_GUIDE_KR.md  WHITEPAPER.md  WHITEPAPER_KR.md
scripts/: push-private.sh
tmp_test/: .opensealignore
tmp_test_out/: openseal.json
