[package]
name = "openseal"
version = "0.2.6"
edition = "2021"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
openseal-core = { path = "../openseal-core" }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
openseal-runtime = { path = "../openseal-runtime" }
tokio = { workspace = true, features = ["full"] }
chrono = "0.4"
hex = { workspace = true }
