[package]
name = "openseal-core"
version = "1.0.0-alpha.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
